...
- (instancetype)init
{
    self = [super init];
    if (self) {
    
        
        _currencies = [NSArray arrayWithObjects: @"GBP", @"USD", @"EUR", @"JPY", nil];
        self.backgroundColor = [UIColor grayColor];
        _tableView = [[UITableView alloc] initWithFrame:CGRectZero style:UITableViewStyleGrouped];
        _tableView.translatesAutoresizingMaskIntoConstraints = NO;
        _tableView.backgroundColor = [UIColor clearColor];

        
...
