...
- (void)bookAction:(id)sender{
    if (self.currentUser) {
        [CoreDataStack saveWithBlockAndWait:^(NSManagedObjectContext *localContext) {
            [self.currentUser addMyTrypsObject:self.selectedSegment];
        }];
        
        [self dialogWithTitle:NSLocalizedString(@"Great!", nil) messageBody:NSLocalizedString(@"Trip Booked", nil) positiveActionTitle:@"OK" actionCompletion:^(UIAlertAction * _Nonnull action) {
            
        }];
        
    }else{
        [self dialogWithTitle:NSLocalizedString(@"Warning", nil) messageBody:NSLocalizedString(@"To book a ride first you need to register", nil) positiveActionTitle:NSLocalizedString(@"Register", nil) actionCompletion:^(UIAlertAction * _Nonnull action) {
            [self openSettings:self];
...
